--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,9 +19,8 @@ android {
 }
 
 dependencies {
-    //noinspection GradleCompatible
-    implementation 'com.android.support:cardview-v7:27.1.1'
-    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+
     //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:26.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
